<resources>
    <string name="app_name">Persona_Material</string>
    <string name="action_settings">Settings</string>
    <string name="agregar_persona">Agregar Persona</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="borrar"> Borrar</string>
    <string name="mensaje_exito"> Persona Guardada</string>
    <string name="mensaje_exito_modificar"> Persona Modificada</string>
    <string name="cedula">Cedula</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>
    <string name="informacion">Datos Personales</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="titulo_eliminar_persona">Eliminar Persona</string>
    <string name="eliminar_mensaje">Esta Seguro que desea Eliminar Esta Persona .?</string>
    <string name="si_eliminar">SI</string>
    <string name="no_eliminar">NO</string>
    <string name="no_vacio">No puede Ser Vacio</string>
    <string name="existe_persona">La persona ya esta registrada</string>
    <string name="modificar_persona">Modificar Persona</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_modificar">Error al Modificar</string>
    <string-array name="sexo">
        <item>@string/m</item>
        <item>@string/f</item>

    </string-array>
</resources>
