<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/informacion"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:collapseColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/nombre"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        tools:text="@string/nombre" />

                    <TextView
                        android:id="@+id/txt_tbl_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="serif"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/apellido"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_tbl_apellido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/cedula"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_tbl_cedula"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/sexo"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_tbl_sexo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            >

            <ImageView
                android:id="@+id/fotopersona"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                app:srcCompat="@drawable/images" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menufab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="@color/shadowColor"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccent"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"

        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_eliminaar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Eliminar"
            android:src="@android:drawable/ic_menu_delete"
            fab:fab_label=""
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ModificarPersona"
            android:src="@android:drawable/ic_menu_edit"
            fab:fab_label=""
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>

